--- a/src/app/_components/markdown-styles.module.css
+++ b/src/app/_components/markdown-styles.module.css
@@ -9,6 +9,22 @@
   @apply my-6;
 }
 
+.markdown ul {
+  @apply list-disc pl-6;
+}
+
+.markdown ol {
+  @apply list-decimal pl-6;
+}
+
+.markdown li {
+  @apply my-2;
+}
+
+.markdown blockquote {
+  @apply border-l-4 border-gray-300 pl-4 italic text-gray-600;
+}
+
 .markdown h2 {
   @apply text-3xl mt-12 mb-4 leading-snug;
 }
